Harshit & Duck | Quartz using postgres now.